# functional

./: CMakeLists.txt  CMakeUserPresets.json  README.md  build.sh
include/: bind.hpp  compose.hpp  curried.hpp  flip.hpp  pipeable.hpp
tests/: CMakeLists.txt  bind.test.cpp  compose.test.cpp  curried.test.cpp  flip.test.cpp  pipeable.test.cpp
